Fixed scrim not covering header

--- a/src/app/navbar/navbar.component.less
+++ b/src/app/navbar/navbar.component.less
@@ -9,6 +9,8 @@
     height: 100%;
     width: 100%;
 
+    z-index: 15;
+
     background: black;
     opacity: 0;
 }
